add MN and .container

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,12 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" />
 
     <link rel="stylesheet" href="./css/style.css" />
     <title>Portfolio</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <a class="logo link" href="./index.html">Web<span class="logo-secondary">Studio</span></a>
       <nav class="nav">
         <ul class="nav-list list">
@@ -35,7 +36,7 @@
         </li>
       </ul>
     </header>
-    <main class="portfolio">
+    <main class="portfolio container">
       <section>
         <h1 hidden>Our Works</h1>
         <ul class="filter list">
@@ -158,7 +159,7 @@
         </ul>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer container">
       <a class="logo link" href="./index.html"
         >Web<span class="logo-secondary-footer">Studio</span></a
       >
