--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"/>
     <link rel="stylesheet" href="./css/style.css" />
     <title>WebStudio</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <a class="logo link" href="./index.html">Web<span class="logo-secondary">Studio</span></a>
       <nav class="nav">
         <ul class="nav-list list">
@@ -40,7 +41,7 @@
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <!--Second section- About us-->
-      <section class="about-us">
+      <section class="about-us container">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="about-list list">
           <li class="aboyt-list-item">
@@ -70,7 +71,7 @@
         </ul>
       </section>
       <!--3 section Works-->
-      <section class="works">
+      <section class="works container">
         <h2 class="title">Чем мы занимаемся</h2>
         <ul class="works-list list">
           <li class="worl-list-item">
@@ -99,7 +100,7 @@
         </ul>
       </section>
       <!--4 section Our team-->
-      <section class="team">
+      <section class="team container">
         <h2 class="title">Наша команда</h2>
         <ul class="team-list list">
           <li class="team-list-item">
@@ -125,7 +126,7 @@
         </ul>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer container">
       <a class="logo link" href="./index.html"
         >Web<span class="logo-secondary-footer">Studio</span></a
       >
