--- a/portfolio.html
+++ b/portfolio.html
@@ -40,11 +40,11 @@
       <section>
         <h1 hidden>Our Works</h1>
         <ul class="filter list">
-          <li><button class="filter-buttons" type="button">Все</button></li>
-          <li><button class="filter-buttons" type="button">Веб-сайты</button></li>
-          <li><button class="filter-buttons" type="button">Приложения</button></li>
-          <li><button class="filter-buttons" type="button">Дизайн</button></li>
-          <li><button class="filter-buttons" type="button">Маркетинг</button></li>
+          <li class="filter-item"><button class="filter-buttons" type="button">Все</button></li>
+          <li class="filter-item"><button class="filter-buttons" type="button">Веб-сайты</button></li>
+          <li class="filter-item"><button class="filter-buttons" type="button">Приложения</button></li>
+          <li class="filter-item"><button class="filter-buttons" type="button">Дизайн</button></li>
+          <li class="filter-item"><button class="filter-buttons" type="button">Маркетинг</button></li>
         </ul>
         <ul class="cards-list list">
           <li class="cards-list-item">
