--- a/index.html
+++ b/index.html
@@ -37,32 +37,32 @@
     </header>
     <main class="main">
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса </h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <!--Second section- About us-->
       <section class="about-us container">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="about-list list">
-          <li class="aboyt-list-item">
+          <li class="about-list-item">
             <h3 class="about-us-title">Внимание к деталям</h3>
             <p class="about-txt">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
-          <li class="aboyt-list-item">
+          <li class="about-list-item">
             <h3 class="about-us-title">Пунктуальность</h3>
             <p class="about-txt">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li class="aboyt-list-item">
+          <li class="about-list-item">
             <h3 class="about-us-title">Планирование</h3>
             <p class="about-txt">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li class="aboyt-list-item">
+          <li class="about-list-item">
             <h3 class="about-us-title">Современные технологии</h3>
             <p class="about-txt">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -100,9 +100,9 @@
         </ul>
       </section>
       <!--4 section Our team-->
-      <section class="team container">
+      <section class="team">
         <h2 class="title">Наша команда</h2>
-        <ul class="team-list list">
+        <ul class="team-list list container">
           <li class="team-list-item">
             <img src="./img/team/squoosh/team1.jpg" alt="Игорь Демьяненко" width="260" />
             <h3 class="team-title">Игорь Демьяненко</h3>
@@ -126,7 +126,8 @@
         </ul>
       </section>
     </main>
-    <footer class="footer container">
+    <footer class="footer">
+      <div class="container">
       <a class="logo link" href="./index.html"
         >Web<span class="logo-secondary-footer">Studio</span></a
       >
@@ -147,6 +148,7 @@
           <li><a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
+      </div>
     </footer>
   </body>
 </html>
