--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>WebStudio</title>
   </head>
@@ -19,7 +22,9 @@
       <a class="logo link" href="./index.html">Web<span class="logo-secondary">Studio</span></a>
       <nav class="nav">
         <ul class="nav-list list">
-          <li class="nav-list-item"><a class="nav-link link current" href="./index.html">Студия</a></li>
+          <li class="nav-list-item">
+            <a class="nav-link link current" href="./index.html">Студия</a>
+          </li>
           <li class="nav-list-item">
             <a class="nav-link link" href="./portfolio.html">Портфолио</a>
           </li>
@@ -37,7 +42,10 @@
     </header>
     <main class="main">
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса </h1>
+        <h1 class="hero-title">
+          Эффективные решения<br />
+          для вашего бизнеса
+        </h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <!--Second section- About us-->
@@ -104,22 +112,24 @@
         <h2 class="title">Наша команда</h2>
         <ul class="team-list list container">
           <li class="team-list-item">
-            <img src="./img/team/squoosh/team1.jpg" alt="Игорь Демьяненко" width="260" />
-            <h3 class="team-title">Игорь Демьяненко</h3>
-            <p class="team-text" lang="en">Product Designer</p>
+            <div class="card-box">
+              <img src="./img/team/squoosh/team1.jpg" alt="Игорь Демьяненко" width="270" />
+              <h3 class="team-title">Игорь Демьяненко</h3>
+              <p class="team-text" lang="en">Product Designer</p>
+            </div>
           </li>
           <li class="team-list-item">
-            <img src="img/team/squoosh/team2.jpg" alt="Ольга Репина" width="260" />
+            <img src="img/team/squoosh/team2.jpg" alt="Ольга Репина" width="270" />
             <h3 class="team-title">Ольга Репина</h3>
             <p class="team-text" lang="en">Frontend Developer</p>
           </li>
           <li class="team-list-item">
-            <img src="./img/team/squoosh/team3.jpg" alt="Николай Тарасов" width="260" />
+            <img src="./img/team/squoosh/team3.jpg" alt="Николай Тарасов" width="270" />
             <h3 class="team-title">Николай Тарасов</h3>
             <p class="team-text" lang="en">Marketing</p>
           </li>
           <li class="team-list-item">
-            <img src="./img/team/squoosh/team4.jpg" alt="Михаил Ермаков" width="260" />
+            <img src="./img/team/squoosh/team4.jpg" alt="Михаил Ермаков" width="270" />
             <h3 class="team-title">Михаил Ермаков</h3>
             <p class="team-text" lang="en">UI Designer</p>
           </li>
@@ -128,26 +138,26 @@
     </main>
     <footer class="footer">
       <div class="container">
-      <a class="logo link" href="./index.html"
-        >Web<span class="logo-secondary-footer">Studio</span></a
-      >
-      <address class="address">
-        <ul class="address-list list">
-          <li>
-            <a
-              class="footer-adress link"
-              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-              target="_blank"
-              rel="noreferrer noopener"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li><a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+        <a class="logo link" href="./index.html"
+          >Web<span class="logo-secondary-footer">Studio</span></a
+        >
+        <address class="address">
+          <ul class="address-list list">
+            <li>
+              <a
+                class="footer-adress link"
+                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                target="_blank"
+                rel="noreferrer noopener"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li>
+              <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li><a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
       </div>
     </footer>
   </body>
