--- a/index.html
+++ b/index.html
@@ -18,29 +18,31 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header class="header container">
-      <a class="logo link" href="./index.html">Web<span class="logo-secondary">Studio</span></a>
-      <nav class="nav">
-        <ul class="nav-list list">
-          <li class="nav-list-item">
-            <a class="nav-link link current" href="./index.html">Студия</a>
+    <header class="header">
+      <div class="container">
+        <a class="logo link" href="./index.html">Web<span class="logo-secondary">Studio</span></a>
+        <nav class="nav">
+          <ul class="nav-list list">
+            <li class="nav-list-item">
+              <a class="nav-link link current" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="nav-list-item"><a class="nav-link link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="header-list list">
+          <li class="header-list-item">
+            <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="nav-list-item">
-            <a class="nav-link link" href="./portfolio.html">Портфолио</a>
+          <li class="header-list-item">
+            <a class="header-link link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
-          <li class="nav-list-item"><a class="nav-link link" href="">Контакты</a></li>
         </ul>
-      </nav>
-      <ul class="header-list list">
-        <li class="header-list-item">
-          <a class="header-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="header-list-item">
-          <a class="header-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
-    <main class="main">
+    <main>
       <section class="hero">
         <h1 class="hero-title">
           Эффективные решения<br />
@@ -49,91 +51,95 @@
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <!--Second section- About us-->
-      <section class="about-us container">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="about-list list">
-          <li class="about-list-item">
-            <h3 class="about-us-title">Внимание к деталям</h3>
-            <p class="about-txt">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="about-list-item">
-            <h3 class="about-us-title">Пунктуальность</h3>
-            <p class="about-txt">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="about-list-item">
-            <h3 class="about-us-title">Планирование</h3>
-            <p class="about-txt">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="about-list-item">
-            <h3 class="about-us-title">Современные технологии</h3>
-            <p class="about-txt">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="about-us section">
+        <div class="container">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <ul class="about-list list">
+            <li class="about-list-item">
+              <h3 class="about-us-title">Внимание к деталям</h3>
+              <p class="about-txt">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="about-list-item">
+              <h3 class="about-us-title">Пунктуальность</h3>
+              <p class="about-txt">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="about-list-item">
+              <h3 class="about-us-title">Планирование</h3>
+              <p class="about-txt">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="about-list-item">
+              <h3 class="about-us-title">Современные технологии</h3>
+              <p class="about-txt">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--3 section Works-->
-      <section class="works container">
-        <h2 class="title">Чем мы занимаемся</h2>
-        <ul class="works-list list">
-          <li class="worl-list-item">
-            <a class="work-list-link link" href="./index.html">
-              <img src="./img/wedo/squoosh/wedo1.jpg" alt="Кодинг" width="370" />
-            </a>
-          </li>
-          <li class="worl-list-item">
-            <a class="work-list-link link" href="">
-              <img
-                src="./img/wedo/squoosh/wedo2.jpg"
-                alt="Прототипы мбильных приложений на ноутбуке"
-                width="370"
-              />
-            </a>
-          </li>
-          <li class="worl-list-item">
-            <a class="work-list-link link" href="">
-              <img
-                src="./img/wedo/squoosh/wedo3.jpg"
-                alt="Дизайнер выбирает цвет на цифровой палитре"
-                width="370"
-              />
-            </a>
-          </li>
-        </ul>
+      <section class="works section">
+        <div class="container">
+          <h2 class="title">Чем мы занимаемся</h2>
+          <ul class="works-list list">
+            <li class="worl-list-item">
+              <a class="work-list-link link" href="./index.html">
+                <img src="./img/wedo/squoosh/wedo1.jpg" alt="Кодинг" width="370" />
+              </a>
+            </li>
+            <li class="worl-list-item">
+              <a class="work-list-link link" href="">
+                <img
+                  src="./img/wedo/squoosh/wedo2.jpg"
+                  alt="Прототипы мбильных приложений на ноутбуке"
+                  width="370"
+                />
+              </a>
+            </li>
+            <li class="worl-list-item">
+              <a class="work-list-link link" href="">
+                <img
+                  src="./img/wedo/squoosh/wedo3.jpg"
+                  alt="Дизайнер выбирает цвет на цифровой палитре"
+                  width="370"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--4 section Our team-->
-      <section class="team">
-        <h2 class="title">Наша команда</h2>
-        <ul class="team-list list container">
-          <li class="team-list-item">
-            <div class="card-box">
+      <section class="team section">
+        <div class="container">
+          <h2 class="title">Наша команда</h2>
+          <ul class="team-list list container">
+            <li class="team-list-item">
               <img src="./img/team/squoosh/team1.jpg" alt="Игорь Демьяненко" width="270" />
               <h3 class="team-title">Игорь Демьяненко</h3>
               <p class="team-text" lang="en">Product Designer</p>
-            </div>
-          </li>
-          <li class="team-list-item">
-            <img src="img/team/squoosh/team2.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="team-title">Ольга Репина</h3>
-            <p class="team-text" lang="en">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img src="./img/team/squoosh/team3.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="team-title">Николай Тарасов</h3>
-            <p class="team-text" lang="en">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img src="./img/team/squoosh/team4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3 class="team-title">Михаил Ермаков</h3>
-            <p class="team-text" lang="en">UI Designer</p>
-          </li>
-        </ul>
+            </li>
+            <li class="team-list-item">
+              <img src="img/team/squoosh/team2.jpg" alt="Ольга Репина" width="270" />
+              <h3 class="team-title">Ольга Репина</h3>
+              <p class="team-text" lang="en">Frontend Developer</p>
+            </li>
+            <li class="team-list-item">
+              <img src="./img/team/squoosh/team3.jpg" alt="Николай Тарасов" width="270" />
+              <h3 class="team-title">Николай Тарасов</h3>
+              <p class="team-text" lang="en">Marketing</p>
+            </li>
+            <li class="team-list-item">
+              <img src="./img/team/squoosh/team4.jpg" alt="Михаил Ермаков" width="270" />
+              <h3 class="team-title">Михаил Ермаков</h3>
+              <p class="team-text" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
@@ -143,7 +149,7 @@
         >
         <address class="address">
           <ul class="address-list list">
-            <li>
+            <li class="address-list-item">
               <a
                 class="footer-adress link"
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
@@ -152,10 +158,12 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="address-list-item">
               <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li><a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="address-list-item">
+              <a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
           </ul>
         </address>
       </div>
